--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,3 @@
 {
-    "cSpell.words": [
-        "dbgenerated",
-        "neondatabase",
-        "NEXTAUTH"
-    ]
+    "cSpell.words": ["dbgenerated", "neondatabase", "NEXTAUTH"]
 }
