--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-    "cSpell.words": ["dbgenerated", "neondatabase", "NEXTAUTH"]
+    "cSpell.words": [
+        "dbgenerated",
+        "neondatabase",
+        "NEXTAUTH",
+        "sonner"
+    ]
 }
