--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+/prisma/migrations
+
 # dependencies
 /node_modules
 /.pnp
@@ -13,12 +15,15 @@
 # testing
 /coverage
 
+
+
 # next.js
 /.next/
 /out/
 
 # production
 /build
+
 
 # misc
 .DS_Store
