--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-radio-group": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.2",
     "bcrypt-ts-edge": "^3.0.1",
     "class-variance-authority": "^0.7.1",
@@ -32,12 +33,10 @@
   },
   "devDependencies": {
     "@auth/prisma-adapter": "^2.7.4",
-    "@prisma/adapter-neon": "^6.3.1",
-    "@sentry/nextjs": "^9.3.0",
-    "tailwind-merge": "^3.0.1",
-    "tailwindcss-animate": "^1.0.7",
     "@eslint/eslintrc": "^3",
+    "@prisma/adapter-neon": "^6.3.1",
     "@prisma/client": "^6.3.1",
+    "@sentry/nextjs": "^9.3.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -47,7 +46,9 @@
     "eslint-config-next": "^15.2.0",
     "postcss": "^8",
     "prisma": "^6.3.1",
+    "tailwind-merge": "^3.0.1",
     "tailwindcss": "^3.4.1",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5"
   }
 }
