--- a/.env.sample
+++ b/.env.sample
@@ -7,3 +7,11 @@ DATABASE_URL=""
 NEXTAUTH_URL="http://localhost:3000/"
 NEXTAUTH_SECRET=""
 NEXTAUTH_URL_INTERNAL="http://localhost:3000/"
+
+SENTRY_AUTH_TOKEN="sntrys_eyxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
+
+PAYMENT_METHODS ="PayPal, Stripe, CashOnDelivery"
+DEFAULT_PAYMENT_METHOD="PayPal"
+
+AUTH_GOOGLE_ID='xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx.apps.googleusercontent.com'
+AUTH_GOOGLE_SECRET='GOCSPX-xxxxxxxxxxxxxxxxxxxxxxxxx'
