--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@prisma/adapter-neon": "^6.3.1",
     "@prisma/client": "^6.3.1",
     "@sentry/nextjs": "^9.3.0",
+    "@tailwindcss/postcss": "^4.0.17",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -48,7 +49,7 @@
     "postcss": "^8",
     "prisma": "^6.3.1",
     "tailwind-merge": "^3.0.1",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^4.0.17",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5"
   }
