--- a/.env
+++ b/.env
@@ -1,1 +1,17 @@
+NEXT_PUBLIC_APP_NAME = "Shoes Store"
+NEXT_PUBLIC_APP_DESCRIPTION = "Modern website in Next js 15"
+NEXT_PUBLIC_SERVER_URL = "http://localhost:3000/"
 
+DATABASE_URL="postgresql://neondb_owner:npg_8dgOPswl9aLh@ep-odd-dew-ab0lsz5q-pooler.eu-west-2.aws.neon.tech/neondb?sslmode=require&channel_binding=require"
+
+NEXTAUTH_URL="http://localhost:3000/"
+NEXTAUTH_SECRET=""
+NEXTAUTH_URL_INTERNAL="http://localhost:3000/"
+
+SENTRY_AUTH_TOKEN="sntrys_eyxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
+
+PAYMENT_METHODS ="PayPal, Stripe, CashOnDelivery"
+DEFAULT_PAYMENT_METHOD="PayPal"
+
+AUTH_GOOGLE_ID='xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx.apps.googleusercontent.com'
+AUTH_GOOGLE_SECRET='GOCSPX-xxxxxxxxxxxxxxxxxxxxxxxxx'
